--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
+  "name": "shuan-website",
+  "version": "1.0.0",
+  "description": "Shuan's portfolio site",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "handlebars": "^4.7.8"
-  }
+    "handlebars": "^4.7.8",
+    "nodemon": "^3.0.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jason-M418/Shuan-s-website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Jason-M418/Shuan-s-website/issues"
+  },
+  "homepage": "https://github.com/Jason-M418/Shuan-s-website#readme"
 }
